Fix issues with distro parent pom
1. Ozone resources should be copied first so that local resources can override the default resources.
2. Removed mistaken copied-and-pasted ${project.parent.basedir} in favour of ${project.basedir}.

--- a/ozone-distro-parent/pom.xml
+++ b/ozone-distro-parent/pom.xml
@@ -148,7 +148,7 @@
               <overwrite>true</overwrite>
               <resources>
                 <resource>
-                  <directory>${project.parent.basedir}/configs</directory>
+                  <directory>${project.basedir}/configs</directory>
                   <excludes>
                     <exclude>.gitkeep</exclude>
                   </excludes>
